--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,16 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
+
+
+spring.config.activate.on-profile=dev
+jdbc.driverClassName=org.postgresql.Driver
+jdbc.url=jdbc:postgresql://localhost:5432/later
+jdbc.username=dbuser
+jdbc.password=12345
+#---
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:shareit
 spring.datasource.username=test
 spring.datasource.password=test
-spring.sql.init.schema-locations=classpath:schema.sql
