--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,36 @@
 services:
+  gateway:
+    build: gateway
+    image: gateway-image
+    container_name: gateway_container
+    ports:
+      - "8080:8080"
+    depends_on:
+      - server
+      - db
+    environment:
+      - SHAREIT_SERVER_URL=http://server:9090
+
+  server:
+    build: server/shareit-server-business
+    image: server-image
+    container_name: server_container
+    ports:
+      - "9090:9090"
+    depends_on:
+      - db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
+      - SPRING_DATASOURCE_USERNAME=dbuser
+      - SPRING_DATASOURCE_PASSWORD=12345
   db:
     image: postgres:16.1
     container_name: shareit-db
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_PASSWORD=12345
       - POSTGRES_USER=dbuser
+      - POSTGRES_PASSWORD=12345
       - POSTGRES_DB=shareit
     healthcheck:
       test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
